--- a/main.css
+++ b/main.css
@@ -3,10 +3,12 @@
     margin: 0;
     text-decoration: none;
     list-style: none;
+    color: #ffd1dc;
 }
 
 body{
-    background: #ff5349;
+    background: #f5f5f5;
+    
 }
 
 .container{ 
@@ -14,8 +16,12 @@ body{
     margin: 0 auto;
 }
 
+.form__row{
+    display: flex;
+    flex-direction: column;
+}
+
 .header{
-    background: #ff5349;
     justify-content: center;
 }
 
@@ -23,7 +29,6 @@ body{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin: 0 0 3px 0;
 }
 
 .ToDoList__title{
@@ -32,39 +37,32 @@ body{
     font-family: monospace;
     padding: 60px 0 30px 0 ;
     font-weight: 900;
-    font-size: 30px;
-    color: #ffffff;
-}
-
-.todolist__button{
-    border: none;
-    background: #B4B4B4;
-    width: 300px;
-    padding: 16px 40px;
-    font-family: monospace;
-    margin: 0 0 0 -4px;
-    font-size: 20px;
-    color: #505050;
+    font-size: 90px;
+    color: #ead7d7;
 }
 
 .ToDoList__form{
-    display:flex;
+    display: flex;
     justify-content: center;
     margin: 0 0 90px 0;
 }
 
 .todolist__text{
     border: none;
-    font-family: monospace;
-    padding: 16px ;
-    font-size: 20px;
-    width: 700px;
+    font-size: 50px;
+    color: #000000;
+    width: 900px;
+    margin: 0 100px;
 }
 
-.todolist__button:hover{
-    transition: 0.4s;
-    background: #7A6B6B;
-    color: #F0EEEE;
+input.todolist__text::placeholder{
+    color: #e6e6e6;
+    font-style: italic;
+}
+
+input:active, :hover, :focus {
+    outline: 0;
+    outline-offset: 0;
 }
 
 .ToDoList__row{
@@ -74,49 +72,28 @@ body{
     align-items: center;
 }
 
-.element__row:hover{
-    background: #ff5349;
-    color: #ffffff;
-    border-radius: 40px;
-}
-
 .element__row{
-    padding: 0 40px;
-    background: #bfbfbf;
-    width: 100%;
-    height: 100px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    font-size: 30px;
-    font-family: monospace;
-    border: 5px #ffffff solid;
-    margin-bottom: 20px;
-    border-radius: 15px;
-}
-
-.element__row:hover{
-    background: #808080;
-}
-
-.active:hover{
-    background: #4d4d4d;
-    transition: 0.3s;
-    color: #ffffff;
-    text-decoration: line-through;
+    justify-content: space-between;
+    border: none;
+    padding: 30px;
+    font-size: 50px;
+    width: 900px;
+    box-shadow: 0 3px 15px gray;
+    background: #ffffff;
 }
 
 .element__text{
-    display: flex;
-    width: auto;
-    align-items: center;
+    transition: 1s;
+    color: #4d4d4d;
+    margin: 0 0 0 -500px;
 }
 
-.active{
+.active .element__text{
     transition: 0.9s;
-    background: #4d4d4d;
-    color: #ffffff;
     text-decoration: line-through;
+    color: #e6e6e6;
 }
 
 .img{
@@ -141,4 +118,76 @@ body{
 }
 
 
+.input__todolist{
+    display: flex;
+    align-items: center;
+    border: none;
+    padding: 30px ;
+    font-size: 50px;
+    width: 900px;
+    box-shadow: 0 3px 15px gray;
+    background: #ffffff;
+}
+
+.arrow{
+    position: absolute;
+    margin: 0 25px;
+}
+
+.arrow::before{
+    content: '▼';
+    color: #000000;
+}
+
+.form__footer{
+    display: none;
+}
+
+.formon{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: none;
+    padding: 30px ;
+    font-size: 25px;
+    width: 900px;
+    color: #e6e6e6;
+    box-shadow: 0 3px 15px gray;
+    background: #ffffff;
+}
+
+.footer__count{
+    color: #777777;
+    margin: 0 80px 0 0;
+    width: 150px;
+}
+
+.footer__menu{
+    width: 400px;
+}
+
+.first:hover{
+    border: 1px #efd5d5 solid;
+    border-radius: 15px;
+}
+
+.footer__clear{
+    color: #777777;
+    border: none;
+    font-size: 25px;
+    background: #ffffff;
+}
+
+.footer__clear:hover{
+    text-decoration: underline;
+}
+
+.first{
+    border: none;
+    background: #ffffff;
+    font-size: 25px;
+    color: #777777;
+    padding: 5px 10px;
+    margin: 0 5px;
+}
 
